--- a/OA4R7U_betucserelo/OA4R7U_betucserelo/OA4R7U_betucserelo.csproj
+++ b/OA4R7U_betucserelo/OA4R7U_betucserelo/OA4R7U_betucserelo.csproj
@@ -43,11 +43,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Allapotter\Allapot.cs" />
+    <Compile Include="Allapotter\Csomopont.cs" />
+    <Compile Include="Allapotter\Operator.cs" />
+    <Compile Include="Keresok\Kereso.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="wordlist.txt" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
