--- a/OA4R7U_betucserelo/OA4R7U_betucserelo/OA4R7U_betucserelo.csproj
+++ b/OA4R7U_betucserelo/OA4R7U_betucserelo/OA4R7U_betucserelo.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Allapotter\Csomopont.cs" />
     <Compile Include="Allapotter\Operator.cs" />
     <Compile Include="Keresok\Kereso.cs" />
+    <Compile Include="Keresok\Melysegi.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
