--- a/OA4R7U_2_25_Ketszemelyes/OA4R7U_2_25_Ketszemelyes/OA4R7U_2_25_Ketszemelyes.csproj
+++ b/OA4R7U_2_25_Ketszemelyes/OA4R7U_2_25_Ketszemelyes/OA4R7U_2_25_Ketszemelyes.csproj
@@ -46,12 +46,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Allapotter\Allapot.cs" />
+    <Compile Include="Allapotter\Operator.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Kereso%28k%29\Negamax.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -76,5 +79,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
